@@ -1,9 +1,7 @@
-python 2.4
+python 2.5
 http://www.python.org/
-ctypes
 comtypes
-pywin32-208
-pyHook 1.4
+pyHook 1.5a
 wxPython
 
 
