@@ -1,4 +1,4 @@
 *Need to Add events in internet explorer that can update parts of the page due to things such as javascript.
 *Need to create mor NVDA config dialogs that can configure such things as document formatting and presentation.
 *Need to make windows security dialogs (including windows log on) readable
-*Need to work out a way of getting the label from a menu item when MSAA fails to do so (example: open with menu in windows explorer context menu).
+*Need to work out a way of getting the label from a menu item when MSAA fails to do so (example: open with menu in windows explorer context menu, also all Skype menus).
