@@ -1,3 +1,7 @@
+Changes since revision 293:
+*Graphics in Mozilla Gecko virtualBuffers are now ignored if they do not have a title / alt attribute.
+*Page up and page down in rich edit documents now speak the line that they move to.
+
 Changes since revision 287:
 *Support for pages with dynamic content in Mozilla Gekco applications is now complete. Make sure that updateContentDynamically (in the virtualBuffers section of nvda.ini) is set to true for this all to work.
 NVDA does not yet automaticlaly read changes, but it does beep when things are being updated. you can arrow around to see what has changed.
